650 - toList remove for java 11